<resources>
    <string name="app_name">书合</string>
    <string name="home_page">首页</string>
    <string name="tag_key_translation_z">0</string>
    <string name="all_books">书库</string>
    <string name="read">已读</string>
    <string name="reading">在读</string>
    <string name="favorite">最爱</string>
    <string name="about">关于</string>
    <string name="search">搜索</string>
    <string name="please_sign_in">请登录...</string>
    <string name="recommend">推荐</string>
    <string name="sign_in">登录</string>
    <string name="havent_sign_up">没有账号？去注册</string>
    <string name="account">账号</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>
    <string name="register">注册</string>
    <string name="mark_read">已读</string>
    <string name="mark_reading">在读</string>
    <string name="mark_fav">最爱</string>
    <string name="user_reg">用户注册</string>
    <string name="user_log">用户登录</string>
</resources>